--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -3,15 +3,23 @@ name = "api"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+debug=true
+
 [dependencies]
 axum = { version = "0.7", features = ["http2"] }
 bytes = "1.7"
 clap = { version = "4.5.17", features = ["derive", "env"] }
-dashmap = "6.1"
+dashmap = { version = "6.1", features = ["serde"] }
 dotenvy = { version = "0.15.7", features = ["clap"] }
+env_logger = "0.11.5"
 futures = "0.3.30"
 hashbrown = { version = "0.14", features = ["serde"] }
+http = "1.1.0"
 image = "0.25"
+jemallocator = "0.5.4"
+log = "0.4.22"
+mime = "0.3.17"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
@@ -19,8 +27,14 @@ thiserror = "1.0"
 tokio = { version = "1.40", features = ["full"] }
 url = "2.5"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+jemallocator = "0.5"
+
 # FUCK this library dawg
 # twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix", "reqwest"] }
 
 [profile.dev.dependencies.image]
+optlevel = 3
+
+[profile.dev.dependencies.jemallocator]
 optlevel = 3
