--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -20,12 +20,19 @@ image = "0.25"
 jemallocator = "0.5.4"
 log = "0.4.22"
 mime = "0.3.17"
+regex = "1.10.6"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.40", features = ["full"] }
+tower = { version = "0.5.0", features = ["tokio"] }
+tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "cors"] }
 url = "2.5"
+
+[patch.crates-io]
+image-webp = { git = "https://github.com/image-rs/image-webp.git" }
+image = { git = "https://github.com/image-rs/image.git" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 jemallocator = "0.5"
@@ -33,8 +40,8 @@ jemallocator = "0.5"
 # FUCK this library dawg
 # twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix", "reqwest"] }
 
-[profile.dev.dependencies.image]
-optlevel = 3
+[profile.dev.package.image]
+opt-level = 3
 
-[profile.dev.dependencies.jemallocator]
-optlevel = 3
+[profile.dev.package.jemallocator]
+opt-level = 3
