--- a/src-web/package.json
+++ b/src-web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "intro-example-threejs",
+  "name": "intro-example",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,8 +18,6 @@
   },
   "dependencies": {
     "three": "^0.168.0",
-    "tmi.js": "^1.8.5",
-    "twitch-chat-emotes": "^0.4.3",
-    "twitch-chat-emotes-threejs": "^0.4.3"
+    "tmi.js": "^1.8.5"
   }
 }
