--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,25 +9,26 @@ debug=true
 [dependencies]
 axum = { version = "0.7", features = ["http2"] }
 bytes = "1.7"
-clap = { version = "4.5.17", features = ["derive", "env"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 dashmap = { version = "6.1", features = ["serde"] }
-dotenvy = { version = "0.15.7", features = ["clap"] }
-env_logger = "0.11.5"
-futures = "0.3.30"
+dotenvy = { version = "0.15", features = ["clap"] }
+env_logger = "0.11"
+futures = "0.3"
 hashbrown = { version = "0.14", features = ["serde"] }
-http = "1.1.0"
+http = "1.1"
 image = "0.25"
-jemallocator = "0.5.4"
-log = "0.4.22"
-mime = "0.3.17"
-regex = "1.10.6"
+jemallocator = "0.5"
+log = "0.4"
+mime = "0.3"
+parking_lot = "0.12"
+regex = "1.10"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.40", features = ["full"] }
-tower = { version = "0.5.0", features = ["tokio"] }
-tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "cors"] }
+tower = { version = "0.5", features = ["tokio"] }
+tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "cors"] }
 url = "2.5"
 
 [patch.crates-io]
