move things into their own libraries and stuff and holy shit i want to explode

--- a/web-example/package.json
+++ b/web-example/package.json
@@ -17,6 +17,7 @@
     "vite": "^5.4.3"
   },
   "dependencies": {
+    "js-lib": "file:../js-lib",
     "three": "^0.168.0",
     "tmi.js": "^1.8.5"
   }
