--- a/web-example/package.json
+++ b/web-example/package.json
@@ -17,7 +17,7 @@
     "vite": "^5.4.3"
   },
   "dependencies": {
-    "js-lib": "file:../js-lib",
+    "twitch-emote-client": "file:../twitch-emote-client",
     "three": "^0.168.0",
     "tmi.js": "^1.8.5"
   }
