--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,6 +23,7 @@ jemallocator = "0.5"
 log = "0.4"
 mime = "0.3"
 parking_lot = "0.12"
+rayon = "1.10"
 regex = "1.10"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
