--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 debug=true
 
 [dependencies]
-axum = { version = "0.7", features = ["http2"] }
+axum = { version = "0.7", features = ["http2", "macros"] }
 bytes = "1.7"
 clap = { version = "4.5", features = ["derive", "env"] }
 config = "0.14"
