--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,7 +23,6 @@ jemallocator = "0.5"
 log = "0.4"
 mime = "0.3"
 parking_lot = "0.12"
-rayon = "1.10"
 regex = "1.10"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -37,8 +36,8 @@ url = "2.5"
 
 # image-webp is bugged on current releases erm!
 [patch.crates-io]
-image-webp = { git = "https://github.com/image-rs/image-webp.git" }
-image = { git = "https://github.com/image-rs/image.git" }
+image-webp = { git = "https://github.com/image-rs/image-webp.git", rev = "c29d6d4587618b43fb8ddeed46638fca86ad0291" }
+image = { git = "https://github.com/juliapixel/image.git", branch = "webp_patch" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 jemallocator = "0.5"
