make env file not required

--- a/api/compose.yml
+++ b/api/compose.yml
@@ -9,4 +9,6 @@ services:
         pull_policy: never
         ports:
             - "10036:8080"
-        env_file: ".env"
+        env_file:
+            - path: .env
+              required: false
